Fixed alignement

--- a/styles/base.css
+++ b/styles/base.css
@@ -51,20 +51,20 @@ img {
 }
 main {
   display: grid;
-  grid-template: 120px 1fr / 1fr 1fr;
+  grid-template: 120px 200px / 1fr 1fr 1fr;
   margin-bottom: 60px;
   width: 80%;
  margin: 0 auto;
 }
 main h2 {
-  grid-column: 1/3;
+  grid-column: 2/3;
   grid-row: 1/2;
   margin: 0 auto;
-  margin-top: 40px;
-  margin-bottom: 0px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   border-bottom: 1px solid black;
   font-size: 2rem;
-  text-align: left;
+  text-align: center;
 }
 .card {
   border-radius: 10px;
@@ -80,12 +80,12 @@ main h2 {
     text-align: center;
 }
 #card1 {
-    grid-column: 1/2;
+    grid-column: 2/3; 
     grid-row: 2/3;
 }
 #card2 {
     grid-column: 2/3;
-    grid-row: 2/3;
+    grid-row: 3/4;
 }
 
 section h3 {
